# docker_infrastructure

./: README.md
docker/: Dockerfile  Dockerfile_ubuntu20  Dockerfile_ubuntu22  nvidia_install.sh  run_docker.sh
docker/examples/bump_go/: CMakeLists.txt  package.xml
docker/examples/bump_go/src/: bump_go.cpp
docker/examples/publisher_example/: CMakeLists.txt  package.xml
docker/examples/publisher_example/src/: publisher_node.cpp
docker/examples/subscriber_example/: CMakeLists.txt  package.xml
docker/examples/subscriber_example/src/: subscriber_node.cpp
docker/installation_scripts/: day_1.sh  day_2.sh  day_3.sh  day_4_verification.sh  day_5.sh  entrypoint.sh  simulator.sh
